# obs-studio

frontend/plugins/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/rtmp-output/: CMakeLists.txt  rtmp-output.c
plugins/web-browser/: CMakeLists.txt  web-browser-plugin.cpp  web-browser-source.cpp  web-browser-source.hpp
shared/obs-scripting/: obs-scripting-python.c
